STCOR-419: Fix aXe error related to <OverlayContainer> (#859)
* Moved <OverlayContainer> into the main content area to fix the aXe error: 'Some page content is not contained by landmarks'. Updated position to 'fixed' to ensure that the <OverlayContainer> covers the entire viewport.

* Minor CSS tweak to make OverlayContainer span all the way to the top. Updated changelog.

--- a/src/components/OverlayContainer/OverlayContainer.css
+++ b/src/components/OverlayContainer/OverlayContainer.css
@@ -1,7 +1,8 @@
 .overlayContainer {
-  position: absolute;
+  position: fixed;
   pointer-events: none;
   z-index: 9999;
   width: 100vw;
-  height: 100vh;
+  top: 0;
+  bottom: 0;
 }
